--- a/src/category-pages.njk
+++ b/src/category-pages.njk
@@ -7,6 +7,7 @@ pagination:
 permalink: "category/{{ catPage.slug }}/{% if catPage.pageNumber == 0 %}{% else %}page/{{ catPage.pageNumber + 1 }}/{% endif %}index.html"
 eleventyComputed:
   title: "{{ catPage.label }}"
+  description: "Latest {{ catPage.label }} stories and links from our RSS sources."
   rssPath: "/category/{{ catPage.slug }}/feed.xml"
 ---
 
