--- a/src/language-pages.njk
+++ b/src/language-pages.njk
@@ -7,6 +7,7 @@ pagination:
 permalink: "lang/{{ langPage.code }}/{% if langPage.pageNumber == 0 %}{% else %}page/{{ langPage.pageNumber + 1 }}/{% endif %}index.html"
 eleventyComputed:
   title: "{{ langPage.label }}"
+  description: "Latest {{ langPage.label }} stories and links from our RSS sources."
   rssPath: "/lang/{{ langPage.code }}/feed.xml"
 ---
 
